--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -4,7 +4,7 @@ layout: default
 <div class="container" itemscope itemtype="http://schema.org/Recipe">
   
 <!-- call up the image and image credit link -->
-  {% for image in page.image %}
+<!--  {% for image in page.image %}
   <div class="xs-p2">
     <img itemprop="image" src="{{site.baseurl}}/images/{{ image }}" />
     {% if page.imagecredit %}
@@ -16,6 +16,7 @@ layout: default
     {% endif %}
   </div>
   {% endfor %}
+-->
 
 <article class="post-content px2">
 
